# gchat-discourse

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DM_SUPPORT.md  IMPERSONATION_GUIDE.md  QUICKSTART.md  README.md  config.yaml.example  config_loader.py  db.py  discourse_client.py  examples.py  google_chat_client.py  main.py  pyproject.toml  requirements.txt  run.sh  setup.py  sync_discourse_to_gchat.py  sync_gchat_to_discourse.py  validate.py  webhook_listener.py
.github/: copilot-instructions.md
docs/: user-guide.md
docs/plans/: IMPLEMENTATION_SUMMARY.md  design.md  fixes.md  phase1.md  phase2-1.md  phase2-2.md  phase2-3.md  phase2-4.md  phase3.md  phase4-1.md  phase4-2.md  phase4-3.md  phase4-4.md  phase4-5.md  phase4-6.md  phase4-7.md  phase4.md  phase5-checklist.md  phase5-details.md  phase5-new.md  phase5.md  progress.md  todo.md
migrations/: 001_initial_chat.py  002_initial_attachments.py  003_add_attachments.py  004_user_avatars.py  005_reactions.py  006_custom_emoji.py  007_message_revisions.py  008_read_receipts.py  009_notification_queue.py  010_client_registry.py  011_chat_schema_updates.py  011_space_activity.py  012_threads.py
migrations/attachments/: 001_initial_attachments.py
migrations/discourse/: 001_initial_state.py
src/gchat_discourse/: __main__.py  config_loader.py  db.py  discourse_client.py  google_chat_client.py  import_spaces_as_categories.py  manage_mappings.py  sync_discourse_to_gchat.py  sync_gchat_to_discourse.py  sync_mappings_by_name.py  user_manager.py
src/gchat_mirror/: __init__.py
tests/: conftest.py  test_discourse_client.py  test_dm_detection.py  test_metrics.py  test_sync_title_body.py  test_user_manager.py  test_write_queue.py
tests/integration/: README.md  test_full_workflow.py
tests/test_cli/: test_clients.py  test_export.py  test_main.py  test_sync.py
tools/: check_migrations.py
(+82 files in other folders)
