[project]
name = "gchat-mirror"
version = "0.1.0"
description = "Mirror Google Chat to SQLite and export to various destinations"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "google-auth>=2.24.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "keyring>=24.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-httpx>=0.29.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "vcrpy>=5.1.0",
    "ruff>=0.1.6",
]

[project.scripts]
gchat-mirror = "gchat_mirror.cli.main:cli"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
